--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    entrypoint: [ '/usr/src/app/entrypoint.sh' ]
     volumes:
       - .:/usr/src/app
     ports:
@@ -14,3 +15,17 @@ services:
       - FLASK_DEBUG
       - FLASK_ENV
       - APP_SETTINGS
+      - DATABASE_URL
+      - DATAVASE_TEST_URL
+    depends_on:
+      - api-db
+
+  api-db:
+    build:
+      context: ./src/db
+      dockerfile: Dockerfile
+    expose:
+      - 5432
+    environment:
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
